= master

* Speed up RodaRequest initialization by avoiding 1-2 method calls (jeremyevans)

* Add roda/session_middleware (RodaSessionMiddleware), usable as a middleware by any Rack app to use Roda's session support (jeremyevans)

* Add sessions plugin for more secure (encrypted+signed) sessions (jeremyevans)

* Support :json_parser and :json_serializer application options as default implementations for parsing/serializing JSON (jeremyevans)

* Add :handle_result option to middleware plugin for modifying rack result before returning it (jeremyevans)

* Make the flash plugin work correctly when sessions are serialized with JSON (jeremyevans)

* Make Integer in typecast_params handle Numeric input, and require that Numeric input not have fractional parts (jeremyevans) (#146)

= 3.9.0 (2018-06-11)

* Add route_csrf plugin for CSRF protection, offering more control, better security, and request-specific tokens compared to rack_csrf (jeremyevans)

= 3.8.0 (2018-05-17)

* Accept convert_each! :keys option that is Proc or Method in typecast_params plugin (jeremyevans)

* Make convert_each! in typecast_params plugin handle hashes with '0'..'N' keys without :keys option (jeremyevans)

= 3.7.0 (2018-04-20)

* Make response_request plugin work with error_handler and class_level_routing plugins (jeremyevans)

* Add content_security_policy plugin for setting an appropriate Content-Security-Policy header (jeremyevans)

= 3.6.0 (2018-03-26)

* Add :wrap option to json_parser plugin, for whether/how to wrap the uploaded JSON object (jeremyevans) (#142)

* Add :early_hints option to the assets plugin, for supporting sending early hints for calls to assets (jeremyevans)

* Add early_hints plugin for sending 103 Early Hint responses, currently only working on puma (jeremyevans)

= 3.5.0 (2018-02-14)

* Add request_aref plugin for configuring behavior of request [] and []= methods (jeremyevans)
